k8s/production/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: netmanager-production
spec:
  redirectScheme:
    scheme: https
    permanent: true
